[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/models/Player1.glb" type="PackedScene" id=1]
[ext_resource path="res://shaders/distance.tres" type="Material" id=2]
[ext_resource path="res://scenes/objects/human.gd" type="Script" id=3]
[ext_resource path="res://data/models/L_hand.glb" type="PackedScene" id=4]
[ext_resource path="res://data/models/R_foot.glb" type="PackedScene" id=5]
[ext_resource path="res://data/models/L_foot.glb" type="PackedScene" id=6]
[ext_resource path="res://data/models/R_hand.glb" type="PackedScene" id=7]

[node name="human" type="Spatial"]
script = ExtResource( 3 )

[node name="Player1" parent="." instance=ExtResource( 1 )]

[node name="Player1" parent="Player1" index="0"]
material_override = ExtResource( 2 )

[node name="L_hand" parent="." instance=ExtResource( 4 )]

[node name="L_hand" parent="L_hand" index="0"]
material_override = ExtResource( 2 )

[node name="R_hand" parent="." instance=ExtResource( 7 )]

[node name="R_hand" parent="R_hand" index="0"]
material_override = ExtResource( 2 )

[node name="L_foot" parent="." instance=ExtResource( 6 )]

[node name="L_foot" parent="L_foot" index="0"]
material_override = ExtResource( 2 )

[node name="R_foot" parent="." instance=ExtResource( 5 )]

[node name="R_foot" parent="R_foot" index="0"]
material_override = ExtResource( 2 )

[editable path="Player1"]
[editable path="L_hand"]
[editable path="R_hand"]
[editable path="L_foot"]
[editable path="R_foot"]
